# Tusqh

./: README.txt
Tusqh/Tusqh/: AlephSupport.cs  Tusqh.csproj  Tusqh.sln
Tusqh/Tusqh/Components/: 3DAntiAliasing.cs  3DBackVol.cs  3DDual.cs  3DExporttoAleph.cs  3DJaggiesResolution.cs  3DMeshtoPLY.cs  3DNastran.cs  3DPinchPoints.cs  3DSculpt.cs  3DTriangulateDual.cs  AntiAliasing2D.cs  BackgroundMesh.cs  Compute2DHomology.cs  Dijkstra.cs  DisconnectandShrink.cs  DualBackgroundMesh.cs  JaggiesRosolution.cs  MakeManifold.cs  MeshtoPLY.cs  Nastran.cs  ObjectFileofMesh.cs  OverlayGrid.cs  RefineDualForVolumeFraction.cs  Sculpt2DInfo.cs  Scultp.cs  SubSamplingWindow.cs  TestWrapperFunctionalityComponent.cs  VTKForMFEM.cs  VolumeFractionEdges.cs  VolumeFractions.cs  WindingNumbers.cs
Tusqh/Tusqh/Properties/: launchSettings.json
Tusqh/libigl_wrapper/: README  libigl_wrapper.sln
Tusqh/libigl_wrapper/src/: CMakeLists.txt  LibIGLWrapper.cpp  LibIGLWrapper.h
Tusqh/libigl_wrapper/wrapper/: wrapper.csproj
Tusqh/libigl_wrapper/wrapper/core/: EigenBasic.cs  EigenMethods.cs
